<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        style="@style/GreenText"
        android:text="Agenda"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/txt_nombrePersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="12dp"
        android:inputType="textPersonName"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_person"
        android:paddingTop="15dp"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/txt_apellidoPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_apellido"
        android:background="@drawable/custom_input"
        android:paddingTop="15dp"
        android:drawableLeft="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/apellido"/>

    <EditText
        android:id="@+id/txt_emailPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_input"
        android:paddingTop="15dp"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/txt_passwordPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingTop="15dp"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:hint="@string/password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="Lista de Personas"
        android:textSize="30dp"
        style="@style/GreenText" />

    <ListView
        android:id="@+id/ls_datePersona"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>